apps/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-app
spec:
  selector:
    app: ui-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
